--- a/client/src/views/MakeAppointment/MakeAppointment.module.css
+++ b/client/src/views/MakeAppointment/MakeAppointment.module.css
@@ -1,5 +1,6 @@
 .makeAppointment {
-    height: 100vh;
+    height: calc(100vh);
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
