--- a/client/src/components/TattooStyles/TattooStyles.module.css
+++ b/client/src/components/TattooStyles/TattooStyles.module.css
@@ -6,7 +6,6 @@
     gap: 100px;
     background-color: var(--black);
     border-top: 1px solid var(--gold);
-    border-bottom: 1px solid var(--gold);
 }
 
 .tattooStylesTitle {
@@ -42,7 +41,7 @@
     font-size: 20px;
     font-family: var(--primaryFont);
     color: var(--white);
-    text-shadow: 0 0 2px #000;
+    text-shadow: 2px 2px 2px #000;
 }
 
 @media (max-width: 1100px) {
