Fix: Small errors corrected.

--- a/client/src/views/MakeAppointment/MakeAppointment.module.css
+++ b/client/src/views/MakeAppointment/MakeAppointment.module.css
@@ -44,6 +44,10 @@
     background-color: var(--black);
 }
 
+.formSectionInput:focus {
+    color: var(--black);
+}
+
 .formSection textarea {
     height: 100px;
     border: none;
