--- a/client/src/components/AdminRow/AdminRow.module.css
+++ b/client/src/components/AdminRow/AdminRow.module.css
@@ -1,6 +1,6 @@
 .row {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .row input {
