--- a/client/src/views/Admin/Admin.module.css
+++ b/client/src/views/Admin/Admin.module.css
@@ -6,7 +6,7 @@
 
 .adminColumns {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .adminColumnsName {
